fixed quite a few issues in the openapi doc, and routes
