# service/api/delete-unfollow.go
@@ -1,7 +1,6 @@
 package api
 
 import (
-	"encoding/json"
 	"net/http"
 
 	"github.com/julienschmidt/httprouter"
@@ -11,14 +10,10 @@ func (rt *_router) deleteUnfollow(w http.ResponseWriter, r *http.Request, ps htt
 	// Retrieve the logged-in user's ID from the context
 	loggedInUserId := r.Context().Value("userID").(string)
 
-	var requestData map[string]string
-	decoder := json.NewDecoder(r.Body)
-	if err := decoder.Decode(&requestData); err != nil {
-		http.Error(w, "Invalid JSON body", http.StatusBadRequest)
-		return
-	}
+	// Extracting userId from the URL path parameter.
+	userId := ps.ByName("userId")
 
-	if err := rt.db.UnfollowUser(loggedInUserId, requestData["userIdToUnfollow"]); err != nil {
+	if err := rt.db.UnfollowUser(loggedInUserId, userId); err != nil {
 		// Handle specific errors as needed
 		http.Error(w, err.Error(), http.StatusBadRequest) // Or other appropriate status code
 		return
