# service/api/post-follow.go
@@ -1,7 +1,6 @@
 package api
 
 import (
-	"encoding/json"
 	"net/http"
 
 	"github.com/julienschmidt/httprouter"
@@ -10,15 +9,10 @@ import (
 func (rt *_router) postFollow(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	loggedInUserId := r.Context().Value("userID").(string)
 
-	// Decode the JSON body
-	var requestData map[string]string
-	decoder := json.NewDecoder(r.Body)
-	if err := decoder.Decode(&requestData); err != nil {
-		http.Error(w, "Invalid JSON body", http.StatusBadRequest)
-		return
-	}
+	// Extracting userId from the URL path parameter.
+	userId := ps.ByName("userId")
 
-	if err := rt.db.FollowUser(loggedInUserId, requestData["userIdToFollow"]); err != nil {
+	if err := rt.db.FollowUser(loggedInUserId, userId); err != nil {
 		// Handle specific errors as needed
 		http.Error(w, err.Error(), http.StatusBadRequest) // Or other appropriate status code
 		return
